added more basic styles, added favicon, added media querys

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon" />
 
-    <title>Project</title>
+    <title>Hjemmeværnskolen's Læringsportal</title>
   </head>
 
   <body>
-    <h1 id="output"></h1>
     <script src="script.js"></script>
   </body>
 </html>
