added button for descaling and it's functionality

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
   </head>
 
   <body>
-    <button id="fontSizer">Større skrift</button>
+    <button id="increaseFont">Increase Font</button>
+    <button id="decreaseFont">Decrease Font</button>
     <h1>Test</h1>
     <h2>Test</h2>
     <h3>Test</h3>
