styled buttons, links, desktop navigation, boxlinks, input. added module that catches the input value from the user and logs it in the console

--- a/index.html
+++ b/index.html
@@ -18,14 +18,45 @@
   </head>
 
   <body>
+    <header>
+      <div id="nav_logo"></div>
+      <nav id="top_menu">
+        <ul>
+          <li>Login/HJV.dk</li>
+          <li>Om os</li>
+          <li>Kontakt</li>
+          <li>English</li>
+        </ul>
+      </nav>
+      <nav id="bottom_menu">
+        <ul>
+          <li>Aktuelt</li>
+          <li>Opgaver</li>
+          <li>Organisation</li>
+          <li>Kapaciteter</li>
+          <li>Bliv frivillig</li>
+          <li><i class="fa-solid fa-magnifying-glass"></i></li>
+        </ul>
+      </nav>
+    </header>
     <button id="increaseFont">Increase Font</button>
     <button id="decreaseFont">Decrease Font</button>
+    <div class="input_container">
+      <input id="userprompt" type="text" placeholder="Skriv et spørgsmål..." />
+      <i class="fa-solid fa-arrow-up" id="sendprompt_btn"></i>
+    </div>
     <h1>Test</h1>
     <h2>Test</h2>
     <h3>Test</h3>
     <h4>Test</h4>
     <h5>Test</h5>
     <p>Test</p>
+    <a href="#" class="link">Link</a>
+    <div class="bigbreaker"></div>
+    <div class="smallbreaker"></div>
+    <div class="boxlink">
+      <div class="overlay"><div>Flyverhjemmeværn</div></div>
+    </div>
     <script src="script.js" type="module"></script>
   </body>
 </html>
