styled the chat a bit more, added username and botname

--- a/index.html
+++ b/index.html
@@ -40,8 +40,12 @@
     </header>
     <div id="chat_container">
       <div id="chat">
-        <div class="user_question"></div>
-        <div class="bot_answer"></div>
+        <div id="user_questions">
+          <div class="user_question"></div>
+        </div>
+        <div id="bot_answers">
+          <div class="bot_answer"></div>
+        </div>
       </div>
       <div id="chatbtns_container">
         <button id="decreaseFont">A</button>
@@ -56,18 +60,11 @@
         <i class="fa-solid fa-arrow-up" id="sendprompt_btn"></i>
       </div>
     </div>
-    <h1>Test</h1>
-    <h2>Test</h2>
-    <h3>Test</h3>
-    <h4>Test</h4>
-    <h5>Test</h5>
-    <p>Test</p>
-    <a href="#" class="link">Link</a>
     <div class="bigbreaker"></div>
     <div class="smallbreaker"></div>
-    <div class="boxlink">
+    <!-- <div class="boxlink">
       <div class="overlay"><div>Flyverhjemmeværn</div></div>
-    </div>
+    </div> -->
     <script src="script.js" type="module"></script>
   </body>
 </html>
