a bit more styling, more responsive

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         <i class="fa-solid fa-arrow-up" id="sendprompt_btn"></i>
       </div>
     </div>
-    <div class="bigbreaker"></div>
-    <div class="smallbreaker"></div>
+    <!-- <div class="bigbreaker"></div>
+    <div class="smallbreaker"></div> -->
     <!-- <div class="boxlink">
       <div class="overlay"><div>Flyverhjemmeværn</div></div>
     </div> -->
