added loading html element and style and animation class

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     <!-- <div class="boxlink">
       <div class="overlay"><div>Flyverhjemmeværn</div></div>
     </div> -->
+    <div class="loader active"></div>
     <script src="script.js" type="module"></script>
   </body>
 </html>
