loading module, fake fetch, & centered loader css

--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
         />
         <i class="fa-solid fa-arrow-up" id="sendprompt_btn"></i>
       </div>
+      <div class="loader"></div>
     </div>
     <!-- <div class="bigbreaker"></div>
     <div class="smallbreaker"></div> -->
     <!-- <div class="boxlink">
       <div class="overlay"><div>Flyverhjemmeværn</div></div>
     </div> -->
-    <div class="loader active"></div>
     <script src="script.js" type="module"></script>
   </body>
 </html>
