burger menu hath begunneth

--- a/index.html
+++ b/index.html
@@ -20,6 +20,49 @@
   <body>
     <header>
       <div id="nav_logo"></div>
+      <div id="burger_menu">
+        <i class="fa-solid fa-bars" id="burger_icon"></i>
+        <nav id="burger_nav">
+          <ul>
+            <div id="ny_chat">
+              <img src="assets/icons/start_chat.png" alt="" class="icon" />
+              <div>
+                <li>
+                  Ny chat
+                  <p>Start en ny chat</p>
+                </li>
+              </div>
+            </div>
+            <div id="chat_oversigt">
+              <img src="assets/icons/start_chat.png" alt="" class="icon" />
+              <div>
+                <li>
+                  Chat oversigt
+                  <p>Overblik over alle tidligere samtaler</p>
+                </li>
+              </div>
+            </div>
+            <div id="ofte_stillede_spoergsmaal">
+              <img src="assets/icons/start_chat.png" alt="" class="icon" />
+              <div>
+                <li>
+                  Ofte stillede spørgsmål
+                  <p>Svar på mest almindelige spørgsmål</p>
+                </li>
+              </div>
+            </div>
+            <div id="undervisningsmaterialer">
+              <img src="assets/icons/start_chat.png" alt="" class="icon" />
+              <div>
+                <li>
+                  Undervisningsmaterialer
+                  <p>Direkte adgang til kursusmaterialer</p>
+                </li>
+              </div>
+            </div>
+          </ul>
+        </nav>
+      </div>
       <nav id="top_menu">
         <ul>
           <li>Login/HJV.dk</li>
