Added Login Section
Added login section. Login works by replacing the normal page and only granting access if your login is verified through the server. Logins are currently stored in JSON format but can be changed in the future.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   </head>
 
   <body>
+    <div id="login-container"></div>
     <header>
       <div id="nav_logo"></div>
       <div id="burger_menu">
