styled chat and burger menu a bit

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
       <div id="burger_menu">
         <i class="fa-solid fa-bars" id="burger_icon"></i>
         <nav id="burger_nav">
+          <div id="user_info">
+            <img src="assets/avatar.png" alt="" id="user_avatar" />
+            <p id="user_name">Anders Jon Andersen</p>
+            <i class="fa-solid fa-gear" id="user_settings"></i>
+          </div>
           <ul>
             <div id="ny_chat">
               <img src="assets/icons/start_chat.png" alt="" class="icon" />
@@ -34,7 +39,7 @@
               </div>
             </div>
             <div id="chat_oversigt">
-              <img src="assets/icons/start_chat.png" alt="" class="icon" />
+              <img src="assets/icons/chat_oversigt.png" alt="" class="icon" />
               <div>
                 <li>
                   Chat oversigt
@@ -43,7 +48,7 @@
               </div>
             </div>
             <div id="ofte_stillede_spoergsmaal">
-              <img src="assets/icons/start_chat.png" alt="" class="icon" />
+              <img src="assets/icons/faq.png" alt="" class="icon" />
               <div>
                 <li>
                   Ofte stillede spørgsmål
@@ -52,7 +57,11 @@
               </div>
             </div>
             <div id="undervisningsmaterialer">
-              <img src="assets/icons/start_chat.png" alt="" class="icon" />
+              <img
+                src="assets/icons/undervisningsmaterialer.png"
+                alt=""
+                class="icon"
+              />
               <div>
                 <li>
                   Undervisningsmaterialer
@@ -102,6 +111,9 @@
         />
         <i class="fa-solid fa-arrow-up" id="sendprompt_btn"></i>
       </div>
+      <p id="disclaimer">
+        Jeg er ikke 100% fejlfri. Gennemtjek altid vigtig information.
+      </p>
       <div class="loader"></div>
     </div>
     <!-- <div class="bigbreaker"></div>
