push for andreas

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
 
   <body>
-    <div id="login-container"></div>
+    <div id="login-container" hidden></div>
     <header>
       <div id="nav_logo"></div>
       <div id="burger_menu">
