--- a/index.html
+++ b/index.html
@@ -20,9 +20,16 @@
   <body>
     <div id="login-container" hidden></div>
     <header>
-      <div id="nav_logo"></div>
+      <div class="desktop">
+      <img src="assets/hjemmevaernet_logo.svg" alt="Hjemmeværnets Logo" class="hjv_logo_stor" />
+      </div>
+      <div class="mobile">
+      <img src="assets/hjv_logo.svg" alt="HJV Logo" id="nav_logo">
       <div id="burger_menu">
-        <i class="fa-solid fa-bars" id="burger_icon"></i>
+        <div id="burger_icon">
+          <span></span>
+      </div>
+      </div>
         <nav id="burger_nav">
           <div id="user_info">
             <img src="assets/avatar.png" alt="" id="user_avatar" />
