--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <nav id="burger_nav">
           <div id="user_info">
             <img src="assets/avatar.png" alt="" id="user_avatar" />
-            <p id="user_name">Anders Jon Andersen</p>
+            <p id="user_name">admin</p>
             <i class="fa-solid fa-gear" id="user_settings"></i>
           </div>
           <ul>
@@ -136,7 +136,7 @@
         <div id="user_info">
           <div>
           <img src="assets/avatar.png" alt="" id="user_avatar" />
-          <p id="user_name">Anders Jon Andersen</p>
+          <p id="user_name">admin</p>
         </div>
           <span class="material-symbols-outlined">
             settings
