User name works

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
 
   <body>
-    <div id="login-container" hidden></div>
+    <div id="login-container"></div>
     <header>
       <div class="desktop">
         <img
@@ -42,7 +42,7 @@
             <div id="user_info">
               <div>
                 <img src="assets/avatar.png" alt="" id="user_avatar" />
-                <p id="user_name">admin</p>
+                <p id="user_name"></p>
               </div>
               <span class="material-symbols-outlined"> settings </span>
             </div>
@@ -146,7 +146,7 @@
           <div id="user_info">
             <div>
               <img src="assets/avatar.png" alt="" id="user_avatar" />
-              <p id="user_name">admin</p>
+              <p id="user_name"></p>
             </div>
             <span class="material-symbols-outlined"> settings </span>
           </div>
