--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <div class="user">
             <div id="user_info">
               <div>
-                <img src="assets/avatar.png" alt="" id="user_avatar" />
+                <img src="assets/kenneth_avatar.png" alt="" id="user_avatar" />
                 <p id="user_name">Kenneth</p>
               </div>
               <span class="material-symbols-outlined"> settings </span>
