--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
     <!-- <div class="boxlink">
       <div class="overlay"><div>Flyverhjemmeværn</div></div>
     </div> -->
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="script.js" type="module"></script>
   </body>
 </html>
