cleaned up index and removed hardcoded name and faq

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div id="user_info">
               <div>
                 <img src="assets/kenneth_avatar.png" alt="" id="user_avatar" />
-                <p id="user_name">Kenneth</p>
+                <p id="user_name"></p>
               </div>
               <span class="material-symbols-outlined"> settings </span>
             </div>
@@ -66,15 +66,7 @@
                 </li>
               </div>
             </div>
-            <div id="ofte_stillede_spoergsmaal">
-              <img src="assets/icons/faq.png" alt="" class="icon" />
-              <div>
-                <li>
-                  Ofte stillede spørgsmål
-                  <p>Svar på mest almindelige spørgsmål</p>
-                </li>
-              </div>
-            </div>
+
             <div id="undervisningsmaterialer">
               <img
                 src="assets/icons/undervisningsmaterialer.png"
@@ -83,31 +75,14 @@
               />
               <div>
                 <li>
-                  Undervisningsmaterialer
-                  <p>Direkte adgang til kursusmaterialer</p>
+                  Materialer
+                  <p>Direkte adgang til filer</p>
                 </li>
               </div>
             </div>
           </ul>
         </nav>
       </div>
-      <nav id="top_menu">
-        <ul>
-          <li>Login/HJV.dk</li>
-          <li>Om os</li>
-          <li>Kontakt</li>
-          <li>English</li>
-        </ul>
-      </nav>
-      <nav id="bottom_menu">
-        <ul>
-          <li>Chat</li>
-          <li>Chatoversigt</li>
-          <li>FAQ</li>
-          <li>Undervisningsmateriale</li>
-          <li><i class="fa-solid fa-magnifying-glass"></i></li>
-        </ul>
-      </nav>
     </header>
     <div class="main">
       <div class="sidebar">
@@ -123,7 +98,7 @@
                 id="sidebar_dropdown_txt"
                 style="display: flex; flex-direction: row"
               >
-                <p>Chat Oversigt</p>
+                <p>Chats</p>
                 <span class="material-symbols-outlined" id="arrow_down">
                   keyboard_arrow_down
                 </span>
@@ -131,21 +106,18 @@
               <div id="threads_container"></div>
             </div>
           </li>
-          <li class="sidebar_item">
-            <span class="material-symbols-outlined"> quiz </span>
-            <p>Ofte Stillede Spørgsmål</p>
-          </li>
+
           <li class="sidebar_item">
             <span class="material-symbols-outlined">
               collections_bookmark
             </span>
-            <p>Undervisningsmaterialer</p>
+            <p>Materialer</p>
           </li>
         </ul>
         <div class="user">
           <div id="user_info">
             <div>
-              <img src="assets/avatar.png" alt="" id="user_avatar" />
+              <img src="assets/kenneth_avatar.png" alt="" id="user_avatar" />
               <p id="user_name"></p>
             </div>
             <span class="material-symbols-outlined"> settings </span>
