Chat overskrift og højde på chatboksen

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 
     <div id="chat_container">
       <h1 id="welcome-text">Hvad kan jeg hjælpe dig med?</h1>
+      <h2 id="current-chat-title" style="display: none;"></h2>
       <div id="chat">
         <div id="chatbox"></div>
       </div>
